--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         
         <nav>
-            <a href="/index.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="#">Blogs</a>
             <a href="">About</a>
             <a href="">Contact</a>
